# portfolio_website

./: .gitignore  package.json
api/: .env  .python-version  api.py  pyproject.toml
site/: package.json
site/public/: index.html
site/src/: App.css  App.js  index.css  index.js  theme.js
site/src/components/: MenuItems.js  Navbar.css  TopNavbar.js
src/: App.css  App.js
src/components/: Footer.js  Repos.js  TopMenu.js
